# Financial_risks

./: .gitignore  README.md  custom.scss  financial_risks.ipynb  presentation.qmd  pyproject.toml  requirements.txt
data/: funds.csv
scripts/: merge_data.py
